# pokemon-tcg-card-detector

./: .gitignore  LICENSE  README.md  cnn_generate_data.py  cnn_train.py  config.yaml  makefile  package-lock.json  package.json  prototype.py  prototype_cnn.py  prototype_faiss.py  pyproject.toml  setup.py  yolo_generate_data.py  yolo_test.py  yolo_train.py
config/: yolo.yaml
configs/: config.yaml  data_gen.yaml  datagen.yaml  tests.yaml  training.yaml  yolo_training_data.yaml
dataset/: cards.yaml  fullart_emb.npy
dataset/cnn/: fullart_mappings.json  master_mappings.json  standard_mappings.json
dataset/yolo/: cards.yaml
models/: cnn_mappings.json  fullart_mappings.json  master_mappings.json  standard_mappings.json
scripts/: download_images.py  import_csv_to_db.py  make_roi.py  object_detection_pokemon.py
src/card_detector/: __main__.py  config.py
src/card_detector/cnn/: classifier.py  generate_data.py  prune.py  train.py  video_classification.py
src/card_detector/database/: database.py
src/card_detector/detectors/: screenshot_pipeline.py  tcg_pocket_pipeline.py  video_pipeline.py
src/card_detector/pipeline/: screenshot_pipeline.py  video_classification.py  video_pipeline.py  video_worker.py
src/card_detector/proto/: prototype.py
src/card_detector/ui/: video_overlay.py
src/card_detector/util/: logging.py
src/card_detector/video/yolo/: generate_data.py
src/card_detector/yolo/: detector.py  generate_data.py  train.py
tests/: confidence_test.py  test_detector.py  test_pipeline.py
tests/fixtures/: test_1_lowres.yaml  test_2_lowres.yaml  test_3.yaml  test_4.yaml  test_5_lowres.yaml
tests/yolo/: test_detector.py
